# the-canopy

./: .gitignore  CNAME  README.md
.github/workflows/: deploy-site.yml
canopy-site/: astro.config.mjs  package.json
canopy-site/public/: CNAME
canopy-site/src/layouts/: Layout.astro
canopy-site/src/pages/: index.astro
canopy-site/src/styles/: global.css
canopy/daemon/: Cargo.toml
canopy/daemon/src/: main.rs  podman.rs  server.rs
canopy/daemon/src/routes/: images.rs  mod.rs  services.rs  system.rs
canopy/gui/: package.json
canopy/gui/.svelte-kit/: ambient.d.ts  non-ambient.d.ts
canopy/gui/.svelte-kit/types/: route_meta_data.json
canopy/gui/.svelte-kit/types/src/routes/: $types.d.ts
canopy/gui/.svelte-kit/types/src/routes/api/images/pull/: $types.d.ts
canopy/gui/.svelte-kit/types/src/routes/api/system/: $types.d.ts
canopy/gui/.svelte-kit/types/src/routes/catalogue/: $types.d.ts
canopy/gui/.svelte-kit/types/src/routes/devices/: $types.d.ts
canopy/gui/src/lib/components/: Sidebar.svelte
canopy/gui/src/lib/server/: daemon.ts
canopy/gui/src/routes/: +layout.svelte  +page.svelte
canopy/gui/src/routes/api/images/pull/: +server.ts
canopy/gui/src/routes/api/images/search/: +server.ts
canopy/gui/src/routes/api/services/: +server.ts
canopy/gui/src/routes/api/system/: +server.ts
canopy/gui/src/routes/catalogue/: +page.svelte
canopy/gui/src/routes/devices/: +page.svelte
canopy/gui/src/routes/nodes/: +page.svelte
canopy/gui/src/routes/services/: +page.svelte
canopy/nixos/: configuration.nix
(+1 files in other folders)
