[package]
name = "canopy-daemon"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "canopy-daemon"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP framework
axum = "0.7"

# Needed to serve axum over a Unix socket instead of TCP
hyper = "1"
hyper-util = { version = "0.1", features = ["tokio", "server-auto"] }
tower = "0.4"

# JSON serialisation
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Ergonomic error handling
anyhow = "1"
